# DynamicEmbeddings

./: .editorconfig  .gitignore  .pre-commit-config.yaml  BENCHMARKING_GUIDE.md  BENCHMARK_SUMMARY.md  CITATION.cff  CODE_OF_CONDUCT.md  COLAB_COMMANDS.txt  COLAB_NOTEBOOK.py  COLAB_PIPELINE.md  CONTRIBUTING.md  DATA_SOURCES_AND_LICENSES.md  LICENSE  Makefile  PROMPT_3_SUMMARY.md  PROMPT_4_SUMMARY.md  ProjectStructure.txt  QA_COMMANDS.md  README.md  READY_TO_RUN.md  SECURITY.md  START_HERE.md  TEST_FLOWS.md  TEST_STATUS.md  TRAINING_FLOWS.md  TROUBLESHOOTING.md  clean_cache.py  colab_commands.sh  colab_full_training.py  colab_multi_dataset_comparison.py  download_arxiv_data.py  explainations.txt  main.py  mypy.ini  new_test.py  plan.md  pyproject.toml  requirements.txt  run_e2e_smoke_test.sh  run_eval_clean.sh  (+10 more)
.github/workflows/: ci.yml
checkpoints/model/runs/Oct03_09-53-35_Alis-MacBook-Pro.local/: events.out.tfevents.1759474416.Alis-MacBook-Pro.local.45527.0
config/: bench_small.yaml  default.yaml  experiment_config.yaml  model_configs.py  settings.py
configs/: balanced.yaml  bench_small.yaml  colab.yaml  default.yaml  defaults.yaml  realistic_production.yaml  smoke_test.yaml
depreacted/: .gitignore  CHANGELOG.md  COLAB_NOTEBOOK.py  Makefile  make_executable.sh  requirements.txt  run_full_flow.sh  run_realistic_training.sh  run_smoke_test.sh  run_smoke_test_fixed.py  setup_scripts.sh  test_quora_loading.py
depreacted/configs/: defaults.yaml  smoke.yaml
depreacted/scripts/: colab_runbook.md  evaluate.py  format.sh  how_to_run_locally.md  multi_dataset_benchmark.py  plot.py  realistic_experiment.py  run_quick.sh  test_e2e.py  tide  train_simple.py  verify_fixes.py
depreacted/src/tide_lite/cli/: __init__.py  aggregate.py  eval_quora.py  (+4 more)
depreacted/tests/: conftest.py  test_config.py  test_train_smoke.py  test_utils.py
docs/: EVALUATION_GUIDE.md  FAISS_TROUBLESHOOTING.md
experiments/: run_experiment.py
notebooks/: Colab_TIDE_Lite.ipynb  README.md  chronoembed_demo.ipynb  colab_benchmark_demo.ipynb  demo.ipynb
outputs/: REPORT.md
reports/: buglist_pass1.md  refactor_plan.md  report_template.md
scripts/: colab_runbook.md  colab_setup.py  colab_setup.sh  diagnose_faiss.sh  diagnose_loss.py  download_arxiv_data.py  download_arxiv_data_REAL.py  download_models.py  evaluate.py  evaluate_checkpoint.py  examples.md  export_results.py  fix_dependencies.sh  format.sh  generate_report.py  generate_report_fixed.py  how_to_run_on_colab.md  install_accelerate.sh  lint.sh  monitor_training.py  multi_dataset_benchmark.py  plot.py  realistic_experiment.py  run_all_experiments.py  run_baselines.py  run_evaluation.py  run_full_pipeline.sh  run_quick.sh  run_tests.sh  test_download.sh  test_dtype.py  test_setup.py  tests.py  train.py  train_temporal.py  visualize_results.py
src/adapters/: lora_adapter.py
src/data/: dataset_loader.py
src/evaluation/: baselines.py  evaluator.py  mteb_evaluator.py
src/models/: base_embedding.py  contextual_embedding.py  domain_classifier.py  domain_embedders.py  dynamic_model.py  embedding_composer.py  experts.py  fusion.py  matryoshka_embedding.py  router.py  temporal_embedding.py
src/temporal_lora/: __init__.py  cli.py
src/temporal_lora/ablate/: __init__.py  quick.py
src/temporal_lora/benchmark/: __init__.py  report_generator.py
src/temporal_lora/config/: data.yaml  eval.yaml  model.yaml  train.yaml
src/temporal_lora/data/: __init__.py  bucketing.py  datasets.py  download_arxiv.py  pairs.py  pipeline.py  preprocessing.py
src/temporal_lora/eval/: __init__.py  efficiency.py  encoder.py  evaluate.py  indexes.py  metrics.py  retrieval.py
src/temporal_lora/evaluation/: __init__.py
src/temporal_lora/models/: __init__.py  lora_model.py
src/temporal_lora/retrieval/: __init__.py
src/temporal_lora/train/: __init__.py  data_loader.py  hard_negatives.py  trainer.py
src/temporal_lora/training/: __init__.py
src/temporal_lora/utils/: __init__.py  env.py  io.py  logging.py  paths.py  seeding.py
src/temporal_lora/visualization/: __init__.py
src/temporal_lora/viz/: __init__.py  drift_trajectories.py  plots.py
src/tide_lite/: __init__.py
src/tide_lite/cli/: __init__.py  aggregate.py  aggregate_cli.py  eval_quora_cli.py  eval_stsb_cli.py  eval_temporal.py  plots.py  plots_cli.py  report.py  report_cli.py  tide.py  train_cli.py
src/tide_lite/config/: __init__.py  config_validate.py  schema.py
src/tide_lite/data/: __init__.py  collate.py  dataloaders.py  datasets.py  temporal_datasets.py
src/tide_lite/eval/: __init__.py  eval_stsb.py  eval_temporal.py  retrieval_quora.py
src/tide_lite/models/: __init__.py  baselines.py  tide_lite.py
src/tide_lite/plots/: __init__.py  aggregate.py
src/tide_lite/train/: __init__.py  advanced_losses.py  losses.py  trainer.py  trainer_mtl.py
src/tide_lite/utils/: __init__.py  common.py  config.py
src/training/: dataset.py  trainer.py
src/utils/: logger.py
temporal_lora/: .editorconfig  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  DATA_SOURCES_AND_LICENSES.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
temporal_lora/.github/workflows/: ci.yml
temporal_lora/data/: arxiv_cs_ml.csv
temporal_lora/scripts/: quickstart.sh
temporal_lora/src/temporal_lora/: __init__.py  cli.py
temporal_lora/src/temporal_lora/config/: data.yaml  eval.yaml  model.yaml  train.yaml
temporal_lora/src/temporal_lora/data/: __init__.py  bucketing.py  datasets.py  pairs.py
temporal_lora/src/temporal_lora/utils/: __init__.py  env.py  io.py  logging.py  paths.py  seeding.py
temporal_lora/tests/: test_data.py  test_sanity.py
tests/: __init__.py  conftest.py  test_bins_and_cleaning.py  test_cli.py  test_config.py  test_data.py  test_data_smoke.py  test_eval_smoke.py  test_faiss_smoke.py  test_hard_negs.py  test_integration_smoke.py  test_lora_attach.py  test_models.py  test_pooling.py  test_sanity.py  test_time_encoding.py  test_train_smoke.py  test_trainer_modes.py  test_trainer_smoke.py  test_training.py  test_utils.py  test_viz_smoke.py
(+12 files in other folders)
